--- a/index.html
+++ b/index.html
@@ -162,9 +162,7 @@
                             <h2>downloads</h2>
                         </div>
                         <div class="section-content">
-                            <p><a href="map_9h.jpg">10:00h map</a>
-                            <br><a href="map_back_18h.jpg">18:00h return map</a>
-                            <p><a href="code.zip">source code (see also github)</a>
+                            <p><a href="https://github.com/aydindemircioglu/putrama">source code (on github)</a>
 
                         </div> 
                     </div>               
