--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
                             <h2>notes</h2>
                         </div>
                         <div class="section-content">
-                            <p>the distance to the stop is not accurate, but is measured as the distance to the <b>next</br> stop.
-                            routes may take different stops.
+                            <p>-the distance to the stop is not accurate, but is measured as the distance to the <b>next</b> stop.
+                            different routes may take part from different stops, this is not considered for now.<br>
+                            <p>-this was coded during the first hackathon at the <a href="http://www.ini.rub.de">institute for neural computations, bochum, germany</a>.<br>
+                            
                         </div> 
                     </div>               
 
@@ -153,7 +155,7 @@
                             add the date and hour to consider, and run the script. it will create a .kml file, with the, named like "map_coord_time.kml".
                             this map you can now easily open in google earth, or use any other geo program that can overlay that to the map you want.
 
-                            <p> prerequisites for the script: Geo::KML::PolyMap.
+                            <p> prerequisites for the script: VRR::EFA, Travel::Routing::DE::VRR, Geo::KML::PolyMap just to name some.
                         </div> 
                     </div>               
 
