--- a/index.html
+++ b/index.html
@@ -127,9 +127,12 @@
                             <h2>idea</h2>
                         </div>
                         <div class="section-content">
-                            <p>a lot of students, when moving to a new city, are new to the neighborhood and might not know how long
-                            it actually takes to the university. so create a map that shows in overlayed colors how long it will take from a 
-                            given location to the university by using the public transport system.</p>
+                            <p>moving to a new city is not an easy thing. most often you have not only to decide on the neighborhood
+                            (funny looking, strange, posh), but have also to find out how long it takes to get to the place you daily visit
+                            (university/workplace etc). to get a rough overview, i decided to hack a script that will sample a given
+                            section of gps-coordinates regularly and determine (by use of public public transport system servers) how
+                            long it roughly takes to get to the place you want to be. this can give an overview how good a certain
+                            place is connected to the outside world.
                         </div> 
                     </div>               
 
@@ -140,7 +143,9 @@
                         <div class="section-content">
                             <p>-the distance to the stop is not accurate, but is measured as the distance to the <b>next</b> stop.
                             different routes may take part from different stops, this is not considered for now.<br>
-                            <p>-this was coded during the first hackathon at the <a href="http://www.ini.rub.de">institute for neural computations, bochum, germany</a>.<br>
+                            <br>-not always all tiles load, i am not sure why, one thing is that routing does not apply, if the goal is very near, e.g.
+                            from the 'botanischer garten' to the ruhr-universitaet stop. 
+                            <br>-this was coded during the first hackathon at the <a href="http://www.ini.rub.de">institute for neural computations, bochum, germany</a>.<br>
                             
                         </div> 
                     </div>               
