--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </div>
                         <div class="section-content">
                             <h2 class="for-mobile"></h2>
-                            <p>rub public transport map
+                            <p>(rub) public transport map
                         </div> 
                     </div>               
                     <!-- END SECTION #1 -->
@@ -142,7 +142,7 @@
                         </div>
                         <div class="section-content">
                             <p>-the distance to the stop is not accurate, but is measured as the distance to the <b>next</b> stop.
-                            different routes may take part from different stops, this is not considered for now.<br>
+                            different routes may take part from different stops, this is not considered for now.
                             <br>-not always all tiles load, i am not sure why, one thing is that routing does not apply, if the goal is very near, e.g.
                             from the 'botanischer garten' to the ruhr-universitaet stop. 
                             <br>-this was coded during the first hackathon at the <a href="http://www.ini.rub.de">institute for neural computations, bochum, germany</a>.<br>
@@ -161,6 +161,49 @@
                             this map you can now easily open in google earth, or use any other geo program that can overlay that to the map you want.
 
                             <p> prerequisites for the script: VRR::EFA, Travel::Routing::DE::VRR, Geo::KML::PolyMap just to name some.
+                            
+                            <p>
+  There are many options, some are from the Travel::Routing::DE package, some are new.
+Those that can be reasonably used are the following:<p>
+<pre>
+	$ ./putrama.pl [options]
+
+	--arrive HH:MM
+		arrival time, e.g. 10:00 in the morning to get in time to the morning lectures.
+	--colorbins #
+		number of bins to threshold the final connection times. Defaults to 32 (if enough tiles are queried).
+	--date DD.MM.YYYY
+		date when to query the connections. weekdays should be faster than weekends,
+		day connections faster than night connections.
+	--endcolor AABBGGRR
+		color for slow connections, alpha value, blue value, green value, red value in hexadecimal.
+	--endlat #
+		end latitute of grid.
+	--endlong #
+		end longitute of grid.
+	--gridsizelat #
+		how many tiles in latitute direction should be created?
+	--gridsizelong #
+		how many tiles in longitude direction should be created?
+	--kmlfilename filename
+		filename for kml output
+	--startcolor AABBGGRR
+		color for fast connections, alpha value, blue value, green value, red value in hexadecimal.
+	--startlat #
+		start latitute of grid.
+	--startlong=f
+		start longitute of grid.
+	--to city, stop 
+		specify where the connections should go to. 
+	--verbosity #
+		verbosity level, 0 = few outputs, 100 = all outputs.
+</pre>
+
+<p>The map on this website was created with 
+<br><pre>
+$ ./putrama.pl --gridsizelong 64 --gridsizelat 64 --startlat 51.340 -endlat 51.750  --startlong 7 --endlong 7.5 --date 6.11.2014 --verbosity 100
+</pre>
+
                         </div> 
                     </div>               
 
